# device_info

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
