[tool.poetry]
name = "device-info"
version = "0.1.0"
description = ""
authors = ["Antoine Lorence <alorence@flokod.com>"]
readme = "README.md"

[tool.poetry-exec-plugin.commands]
lint = "ruff ."
lint_fix = "ruff . --fix"
build = "pyinstaller --onefile --name device_info main.py"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
